--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "project3",
   "private": true,
+  "homepage": "https://github.com/justinmk21/Real-Estate-App-Nola.git",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -30,6 +32,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
     "vite": "^5.4.1",
     "vite-tsconfig-paths": "^5.1.4"
